notebook name clash and logging improvements
https://ucsc-cgl.atlassian.net/browse/DOCK-2565
https://ucsc-cgl.atlassian.net/browse/DOCK-2469